# HomeMediaAutomation

./: .gitignore  README.md
client/HMAC/app/: build.gradle
client/HMAC/app/src/androidTest/java/com/ppb/hmac/: ApplicationTest.java
client/HMAC/app/src/main/: AndroidManifest.xml
client/HMAC/app/src/main/res/values/: strings.xml
client/HMAC/app/src/test/java/com/ppb/hmac/: ExampleUnitTest.java
server/: CMakeLists.txt  HomeAutomationServerConfig.h
server/include/: HomeAutomationServerConfig.h.in
server/src/: main.c
